# Programming-CookBook

./: .gitignore  AGENTS.md
CPP-CookBook/: .gitmodules  CMakeLists.txt  README.md
CPP-CookBook/demos/01_core_guidelines/02_Philosophy_理念/p1&p9&p11&p13_标准库优先原则/: README.md
CPP-CookBook/demos/01_core_guidelines/02_Philosophy_理念/静态类型安全/: p4_array_decay问题.cpp  p4_narrowing_conversion问题.cpp
CPP-CookBook/demos/01_core_guidelines/07_resource_资源管理/RAII/: r1_RAII.cpp
CPP-CookBook/demos/01_core_guidelines/07_resource_资源管理/RAII/r1_RAII的应用/: r1_01_锁_lock_guard.cpp  r1_02_智能指针_unique_ptr.cpp  r1_03_流对象_stringstream.cpp  r1_04_容器_vector.cpp  r1_05_作用域退出_scope_exit.cpp  r1_06_临时状态恢复_scope_guard.cpp  r1_07_作用域计时器_scope_timer.cpp  r1_08_线程_jthread.cpp
CPP-CookBook/demos/01_core_guidelines/07_resource_资源管理/内存分配与释放/: r10_避免malloc和free.cpp  r11_避免显式调用new和delete.cpp  r13_在一条表达式语句里不要做多次显式资源分配.cpp
CPP-CookBook/demos/01_core_guidelines/07_resource_资源管理/智能指针/: r20_智能指针_所有权.cpp
CPP-CookBook/demos/01_core_guidelines/07_resource_资源管理/智能指针/函数参数传递的原则/1_如果函数具有所有权语义_那么参数是智能指针/: r33_如果函数会改变unique指针指向的对象_那么入参就是unique指针的引用.cpp
CPP-CookBook/demos/01_core_guidelines/07_resource_资源管理/智能指针/函数参数传递的原则/2_其他情况_参数是非拥有引用形式/: 如果函数不表达所有权语义_那么参数是非拥有引用形式.cpp
CPP-CookBook/demos/01_core_guidelines/07_resource_资源管理/智能指针/智能指针作为参数进行传递的原则/1_如果函数具有所有权语义_那么参数是智能指针/: r32_如果函数接管所有权_那么入参就是unique指针.cpp  r34_make_unique作为参数传递时什么时候需要move.cpp
CPP-CookBook/demos/01_core_guidelines/07_resource_资源管理/智能指针/智能指针作为参数进行传递的原则/2_其他情况_参数是非拥有引用形式/: 如果函数不表达所有权语义_那么参数是非拥有引用形式.cpp
CPP-CookBook/demos/01_core_guidelines/07_resource_资源管理/智能指针/智能指针的创建原则/优先使用make方法创建智能指针/: r23_抛异常时不会泄露.cpp
CPP-CookBook/demos/01_core_guidelines/07_resource_资源管理/智能指针/智能指针的选取原则/: r21_智能指针_智能指针的选取原则.cpp
CPP-CookBook/demos/01_core_guidelines/07_resource_资源管理/智能指针/智能指针的选取原则/shared_ptr/共享所有权/: r37_不要让从shared_ptr获取的裸指针脱离其所有权控制.cpp
CPP-CookBook/demos/01_core_guidelines/07_resource_资源管理/智能指针/智能指针的选取原则/shared_ptr/共享所有权/案例/: 事件总线.cpp  异步任务共享生命周期.cpp
CPP-CookBook/demos/01_core_guidelines/07_resource_资源管理/智能指针/智能指针的选取原则/unique_ptr/独占所有权/: r21_所有权转移过程.cpp  r21_独占所有权.cpp
CPP-CookBook/demos/01_core_guidelines/07_resource_资源管理/智能指针/智能指针的选取原则/unique_ptr/独占所有权/案例/: r21_独占所有权_树结构.cpp
CPP-CookBook/demos/01_core_guidelines/07_resource_资源管理/智能指针/智能指针的选取原则/weak_ptr/打破循环引用/: demo1.h  demo1_反例_双向shared_ptr形成循环引用.cpp  demo1_正例_使用weak_ptr打破循环引用.cpp
CPP-CookBook/demos/01_core_guidelines/07_resource_资源管理/智能指针/智能指针的选取原则/独占所有权_选用unique指针/: r21_独占所有权_工厂函数.cpp  r21_默认首选unique_ptr.cpp
CPP-CookBook/demos/01_core_guidelines/07_resource_资源管理/智能指针/生命周期/r24_weak_ptr打破循环引用/: demo1.h  demo1_反例_双向shared_ptr形成循环引用.cpp  demo1_正例_使用weak_ptr打破循环引用.cpp
CPP-CookBook/include/cookbook/: config.hpp
Dev-CookBook/: .gitignore  package-lock.json  package.json
GeoStudio/: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  (+2 more)
GeoStudio/src-tauri/: Cargo.toml  tauri.conf.json
GeoStudio/src-tauri/capabilities/: default.json
GeoStudio/src-tauri/icons/: icon.icns
GeoStudio/src-tauri/src/: lib.rs  main.rs
(+315 files in other folders)
