[package]
name = "geostudio"
version = "0.1.0"
description = "GeoStudio Desktop GIS Lab"
authors = ["GeoStudio Contributors"]
edition = "2021"

[lib]
name = "geostudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
